--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ capybara-*.html
 **.orig
 rerun.txt
 pickle-email-*.html
-
+/spring-1000
+/.c9
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
 config/secrets.yml
